--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import "../styles/global.css";
+import { href } from "../lib/href";
 ---
 
 <!doctype html>
@@ -9,6 +10,9 @@ import "../styles/global.css";
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>ACG Radar</title>
     <meta name="description" content="一个每小时自动更新的 ACG 资讯聚合小站（中日双语 UI）。" />
+    <meta name="theme-color" content="#f2f4f8" />
+    <link rel="icon" type="image/svg+xml" href={href("/favicon.svg")} />
+    <link rel="preconnect" href="https://images.weserv.nl" crossorigin />
   </head>
   <body>
     <main class="mx-auto max-w-3xl px-4 py-12">
